<resources>
    <string name="app_name">Tab Layout Demo #2</string>
    <string name="output_field_1">Output Field (Fragment One)</string>
    <string name="output_field_2">Output Field (Fragment Two)</string>
    <string name="output_text_1">Hello, World! (Fragment One)</string>
    <string name="output_text_2">Hello, World! (Fragment Two)</string>
    <string name="input_button">Click Me!</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMul">\u00D7</string>
    <string name="btnDiv">\u00F7</string>
    <string name="btnSqRt">\u221A</string>
    <string name="btnSign">\u00B1</string>
    <string name="btnEq">=</string>
    <string name="btnPer">%</string>
    <string name="btnClear">C</string>
    <string name="btnDec">.</string>
</resources>